Switch to MiniMessage format in messages.yml